package sase.adaptive.monitoring;

public interface IAdaptationNecessityDetector {

	public boolean shouldAdapt();
}
